2008-06-17  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkrecentmanager.c:
	(gtk_recent_manager_remove_item): Fix dumb typo in the previous
	commit.

2008-06-17  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkrecentmanager.c:
	(gtk_recent_manager_remove_item),
	(gtk_recent_manager_move_item): Increase the consistency of the
	errors returned by GtkRecentManager. (Paolo Borelli)

2008-06-17  Paolo Borelli  <pborelli@katamail.com>

	* gtk/tests/recentmanager.c: add some unit tests for GtkRecentManager.

2008-06-17  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkrecentmanager.c:
	(gtk_recent_manager_remove_item): Consistently use the same
	error when removing a URI from an empty GtkRecentManager.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkfilechooserdefault.c: remove static integer variables
	which hold the number of members in GtkTargetEntry arrays and use
	G_N_ELEMENTS() directly instead.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtk.symbols: move some deprecated symbols into
	#ifndef GTK_DISABLE_DEPRECATED.

2008-06-17  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkfilechooserdefault.c:
	(gtk_file_chooser_default_init),
	(gtk_file_chooser_default_constructor),
	(gtk_file_chooser_default_screen_changed),
	(recent_start_loading): Remove the GtkRecentManager screen
	dance, as it has been deprecated since 2.12. Now we get the
	GtkRecentManager singleton whewn we create the FileChooserDefault
	instance. (Michael Natterer)

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkoptionmenu.c (gtk_option_menu_position): cast menu's
	toplevel to GtkWindow when passing to gtk_window_set_type_hint().

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktestutils.c: #undef GTK_DISABLE_DEPRECATED, clean up
	includes a bit.

	* gtk/gtkuimanager.c: #include "gtkwindow.h", it was only pulled
	in via deprecated headers.

2008-06-16  Matthias Clasen  <mclasen@redhat.com>
